--- a/css/cover.css
+++ b/css/cover.css
@@ -617,13 +617,14 @@ font-family: 'Lexend Deca', sans-serif;
 }
 
 #claim-text-wrapper #payment-info #payment-info-text .offer {
-    font-size: 20px;
+    font-size: 17px;
     font-style: normal;
+    line-height: 25px;
     margin: 0;
     padding: 0;
 	font-weight: 100;
 	margin: 15px 0px 0px 0px;
-	font-style: italic;
+	
 }
 
 
